fix section overflow error on desktop view

--- a/styles/sass/sections/_api.scss
+++ b/styles/sass/sections/_api.scss
@@ -4,7 +4,10 @@
 	display: flex;
 	align-items: center;
 	width: 100%;
-	overflow-x: hidden;
+
+	@include respond(phone) {
+		overflow-x: hidden;
+	}
 }
 
 .api {
